tests/expectations/compiler/const_generics/external_struct_fail.out
Error [ETYC0372146]: unexpected generic const argment for parent.aleo/Bar::[4].
    --> compiler-test:5:24
     |
   5 |     transition main(c: Bar::[4]) {
     |                        ^^^
     |
     = If this is an external struct, consider using a resolved non-generic version of it instead. External structs can't be instantiated with const arguments
